meta tag added viewport

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> First day Doc</title>
+        
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div class="header">
-            <a href="index.html" class="logo">Alberto Cantu</a>
+            <a href="index.html" class="logo">Alberto Cantu</a
             <ul class="header-right">
                 <li><a href="aboutme.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
