--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="header">
-            <a href="index.html" class="logo">Alberto Cantu</a
+            <a href="index.html" class="logo">Alberto Cantu</a>
             <ul class="header-right">
                 <li><a href="aboutme.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
